OpenLGTV BCM: Remote Control improvements - better scalling on smartphones/tablets (Symbian, Android, 240x320 and up - scroll on 2 pages), smaller size but bigger buttons
git-svn-id: http://svn.openlgtv.org.ru@1115 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
@@ -3,116 +3,112 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!--  OpenLGTV Remote Control by mihaifireball   -->
+<!--  modified by xeros -->
 <head>
   <title>OpenLGTV Remote Control</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
   <style type="text/css">
     input {font-size: 11pt;}
+    span {font-size: 1pt;}
  </style>
 </head>
 <body>
 <center>
-<div style="width: 350px; background-color:#151515;">
+<div style="width: 310px; background-color:#151515;">
 <font size="-2">
+<span><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_POWER';" value="Power" style="background-color:red; height: 30px; width: 65px;" /><font size="+1" color="yellow"> OpenLGTV BCM remote</font>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_ENERGY_SAVING';" value="EnergyS" style="height: 30px; width: 64px; background-color:lightgreen;" />&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AV_MODE';" value="A / V" style="height: 30px; width: 64px; background-color:#FFEA8A;" />&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INPUT';" style="height: 30px; width: 64px; background-color:white;" value="Input" />&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TV_RAD';" style="height: 30px; width: 64px; background-color:white;" value="TV/RAD"/> 
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_1';" style="height: 30px; width: 85px;" value="1 .,;@"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_2';" style="height: 30px; width: 85px;" value="2 abc"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3';" style="height: 30px; width: 85px;" value="3 def"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_4';" style="height: 30px; width: 85px;" value="4 ghi"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_5';" style="height: 30px; width: 85px;" value="5 jkl"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_6';" style="height: 30px; width: 85px;" value="6 mno"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_7';" style="height: 30px; width: 85px;" value="7 pqrs"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_8';" style="height: 30px; width: 85px;" value="8 tuv"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_9';" style="height: 30px; width: 85px;" value="9 wxyz"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIST';" style="height: 30px; width: 85px;" value="LIST"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_0';" style="height: 30px; width: 85px;" value="0 ._."/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_VIEW';" style="height: 30px; width: 85px;" value="Q. VIEW"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_UP';" style="height: 38px; width: 80px; background-color: lightblue;" value="VOL. Up"/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FAV_MARK';" style="height: 30px; width: 70px;" value="FAV"/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_UP';" style="height: 38px; width: 80px; background-color: lightblue;" value="CH. Up"/>
 <br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_POWER';" value="Power" style="background-color:red; height: 25px; width: 68px;" /><font size="+1" color="yellow"> OpenLGTV BCM remote</font>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_ENERGY_SAVING';" value="EnergyS" style="height: 25px; width: 68px; background-color:lightgreen" />
-&nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AV_MODE';" value="A / V" style="height: 25px; width: 68px; background-color:#FFEA8A" />
-&nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INPUT';" style="height: 25px; width: 67px" value="Input" />
-&nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TV_RAD';" style="height: 25px; width: 67px" value="TV/RAD"/> 
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_1';" style="height: 25px; width: 100px" value="1 .,;@"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_2';" style="height: 25px; width: 100px" value="2 abc"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3';" style="height: 25px; width: 100px" value="3 def"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_4';" style="height: 25px; width: 100px" value="4 ghi"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_5';" style="height: 25px; width: 100px" value="5 jkl"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_6';" style="height: 25px; width: 100px" value="6 mno"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_7';" style="height: 25px; width: 100px" value="7 pqrs"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_8';" style="height: 25px; width: 100px" value="8 tuv"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_9';" style="height: 25px; width: 100px" value="9 wxyz"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIST';" style="height: 25px; width: 100px" value="LIST"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_0';" style="height: 25px; width: 100px" value="0 ._."/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_VIEW';" style="height: 25px; width: 100px" value="Q. VIEW"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_UP';" style="height: 40px; width: 79px" value="VOL. Up"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FAV_MARK';" style="height: 25px; width: 70px" value="FAV"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_UP';" style="height: 40px; width: 79px" value="CH. Up"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RATIO';" style="height: 28px; width: 70px;" value="RATIO"/>
 <br>
-
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RATIO';" style="height: 25px; width: 70px" value="RATIO"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_DOWN';" style="height: 38px; width: 80px; background-color: lightblue;" value="VOL.Dwn"/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MUTE';" style="height: 30px; width: 70px;" value="MUTE"/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_DOWN';" style="height: 38px; width: 80px; background-color: lightblue;" value="CH. Dwn"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MENU';" style="height: 30px; width: 85px;" value="MENU"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_NETCAST';" style="height: 30px; width: 85px;" value="NetCast"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_MENU';" style="height: 30px; width: 85px;" value="Q. MENU"/>
+<!-- span><br><br></span -->
 <br>
-
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_DOWN';" style="height: 40px; width: 79px" value="VOL.Dwn"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MUTE';" style="height: 25px; width: 70px" value="MUTE"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_DOWN';" style="height: 40px; width: 79px" value="CH. Dwn"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MENU';" style="height: 25px; width: 100px" value="MENU"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_NETCAST';" style="height: 25px; width: 100px" value="NetCast"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_MENU';" style="height: 25px; width: 100px" value="Q. MENU"/>
-<br><br>
-
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_UP';" style="height: 40px; width: 100px" value="/\"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LEFT';" style="height: 40px; width: 100px" value="<"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_OK';" style="height: 40px; width: 100px" value="OK"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RIGHT';" style="height: 40px; width: 100px" value=">"/>
-<br><br>
-
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_DOWN';" style="height: 40px; width: 100px" value="\/"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RETURN_EXIT';" style="height: 25px; width: 100px" value="BACK"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GUIDE';" style="height: 25px; width: 100px" value="GUIDE"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_EXIT';" style="height: 25px; width: 100px" value="EXIT"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RED_KEY';" style="height: 25px; width: 68px; background-color:red" value=""/>
-&nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GREEN_KEY';" style="height: 25px; width: 68px; background-color:green" value=""/>
-&nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_YELLOW_KEY';" style="height: 25px; width: 67px; background-color:yellow" value=""/>
-&nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BLUE_KEY';" style="height: 25px; width: 67px; background-color:blue" value=""/> 
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TEXT';" style="height: 25px; width: 70px" value="TEXT"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_T_OPT';" style="height: 25px; width: 70px" value="T.OPT"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SUBTITLE';" style="height: 25px; width: 70px" value="Subtitle"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_STOP';" style="height: 25px; width: 70px" value="STOP"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PLAY';" style="height: 25px; width: 70px" value="PLAY"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAUSE';" style="height: 25px; width: 70px" value="PAUSE"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BACKWARD';" style="height: 25px; width: 70px" value="Rewind"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FORWARD';" style="height: 25px; width: 70px" value="Forward"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SIMPLINK';" style="height: 25px; width: 70px" value="Simplink"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INFO';" style="height: 25px; width: 70px" value="INFO"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AD';" style="height: 25px; width: 70px" value="AD"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_APP';" style="height: 25px; width: 70px" value="APP/*"/>
-<br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_REC';" style="height: 25px; width: 70px" value="REC"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIVETV';" style="height: 25px; width: 70px" value="LIVE TV"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3D';" style="height: 25px; width: 70px" value="3D"/>
-<br><br>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_UP';" style="font-size: 10pt; height: 40px; width: 85px;" value="/\"/>
+<!-- span><br><br></span -->
+<br>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LEFT';" style="font-size: 13pt; height: 40px; width: 85px;" value="<"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_OK';" style="font-size: 13pt; height: 40px; width: 85px;" value="OK"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RIGHT';" style="font-size: 13pt; height: 40px; width: 85px;" value=">"/>
+<!-- span><br><br></span -->
+<br>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_DOWN';" style="font-size: 10pt; height: 40px; width: 85px;" value="\/"/>
+<!-- span><br><br></span -->
+<br>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RETURN_EXIT';" style="height: 30px; width: 85px;" value="BACK"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GUIDE';" style="height: 30px; width: 85px;" value="GUIDE"/>&nbsp; &nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_EXIT';" style="height: 30px; width: 85px;" value="EXIT"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RED_KEY';" style="height: 30px; width: 64px; background-color:red;" value=""/>&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GREEN_KEY';" style="height: 30px; width: 64px; background-color:green;" value=""/>&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_YELLOW_KEY';" style="height: 30px; width: 64px; background-color:yellow;" value=""/>&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BLUE_KEY';" style="height: 30px; width: 64px; background-color:blue;" value=""/> 
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TEXT';" style="height: 30px; width: 85px;" value="TEXT"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_T_OPT';" style="height: 30px; width: 85px;" value="T.OPT"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SUBTITLE';" style="height: 30px; width: 85px;" value="Subtitle"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_STOP';" style="height: 30px; width: 85px;" value="STOP"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PLAY';" style="height: 30px; width: 85px;" value="PLAY"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAUSE';" style="height: 30px; width: 85px;" value="PAUSE"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BACKWARD';" style="height: 30px; width: 85px;" value="Rewind"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FORWARD';" style="height: 30px; width: 85px;" value="Forward"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SIMPLINK';" style="height: 30px; width: 85px;" value="Simplink"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INFO';" style="height: 30px; width: 85px;" value="INFO"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AD';" style="height: 30px; width: 85px;" value="AD"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_APP';" style="height: 30px; width: 85px;" value="APP/*"/>
+<span><br><br></span>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_REC';" style="height: 30px; width: 85px;" value="REC"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3D';" style="height: 30px; width: 85px; color: red;" value="3D"/>
+&nbsp;&nbsp;
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIVETV';" style="height: 30px; width: 85px;" value="LIVE TV"/>
+<span><br><br></span>
 </font>
 </div>
 </center>
