--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -21,7 +21,6 @@ Not resolved (yet) issues: (status as for 0.5.0-beta4):
     * SmartTV (GP3B) builds were not tested
 
 TODO (not everything to be done for 0.5.0):
-    * FileManager: add upload button (on remote access only) to make it possible to upload files via http to any paths
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
@@ -77,6 +76,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: FileManager: IMDB MovieInfo option on 'INFO' button (alternative is '1' button)
     * ADD: FileManager: M3U and PLS playlist can be viewed (with track selection) through M3U parser with 'OK' button or played continuosly with 'Play' button
     * ADD: FileManager: handle pause/resume and backward/forward actions for (image) slideshow
+    * ADD: FileManager: 'Upload' buttons for remote file uploads possibility
     * ADD: /mnt/usb{1,2}/Drive{7,8} and /mnt/usb{1,2}/NetShare mount points
     * ADD: continous playback feature to Yavido alternative
     * ADD: /mnt/lg/widevine and /mnt/lg/res/cert mount points from SmartTV models to make successful chrooting of installer image on SmartTV models
