OpenLGTV BCM: FileManager: 'Download' button in text files viewer
git-svn-id: http://svn.openlgtv.org.ru@1120 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -77,6 +77,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: FileManager: M3U and PLS playlist can be viewed (with track selection) through M3U parser with 'OK' button or played continuosly with 'Play' button
     * ADD: FileManager: handle pause/resume and backward/forward actions for (image) slideshow
     * ADD: FileManager: 'Upload' buttons for remote file uploads possibility
+    * ADD: FileManager: 'Download' button in text files viewer to download files as binary
     * ADD: /mnt/usb{1,2}/Drive{7,8} and /mnt/usb{1,2}/NetShare mount points
     * ADD: continous playback feature to Yavido alternative
     * ADD: /mnt/lg/widevine and /mnt/lg/res/cert mount points from SmartTV models to make successful chrooting of installer image on SmartTV models
