OpenLGTV BCM: fix finding place for relative paths mount when OpenLGTV_BCM dir doesn't exist or there are two USB storage devices connected
git-svn-id: http://svn.openlgtv.org.ru@1125 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -67,6 +67,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: fixes in web proxy that should load any web pages now (including tunnelled connecttions via SSL/TLS (https://))
     * FIX: ability to break boot process on serial connection with CTRL+C
     * FIX: return after command execussion in Remote Control on stock web browser in old Symbian based smartphones
+    * FIX: finding place for relative paths mount when OpenLGTV_BCM dir doesn't exist or there are two USB storage devices connected
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
