OpenLGTV BCM: changelog (todo/issues list) update
git-svn-id: http://svn.openlgtv.org.ru@1130 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -15,12 +15,14 @@ Not resolved (yet) issues: (status as for 0.5.0-beta4):
     * Flash elements written for Flash 9 and up don't work at all or don't work properly
     * new 'YouTube in TV' interace is a bit sluggish (but videos are being played at the right framerate, including 1080p videos), starts slowly and exit takes around 10 seconds,
     * 'YouTube in TV' interace sometimes can crash addon_mgr when trying to exit by too many back/exit/other combo button presses
+    * images/photos slideshow/preview in FileManager sometimes tries to open path without image
     * Some USB mouses or keyboard+mouse combo need to copy additional kernel modules - most modules binaries are in addons in SVN and are supported
     * USB keyboards are not supported in web browser
     * Bluetooth HID devices are not supported
     * SmartTV (GP3B) builds were not tested
 
 TODO (not everything to be done for 0.5.0):
+    * FileManager: fix images/photos slideshow/preview that sometimes tries to open path without image
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
