OpenLGTV BCM: FileManager: performance tweaks
git-svn-id: http://svn.openlgtv.org.ru@1134 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -22,12 +22,12 @@ Not resolved (yet) issues: (status as for 0.5.0-beta4):
     * SmartTV (GP3B) builds were not tested
 
 TODO (not everything to be done for 0.5.0):
+    * BusyBox: 'getty' and 'sed' applets bugfixes
     * FileManager: fix images/photos slideshow/preview that sometimes tries to open path without image
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
-    * [ update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754" ] - DONE?
     * udpxy integration for udp:// and rtp:// links
     * update and test scripts chrooted on SmartTV models
     * enable YWE in North American models outside of USA (Canada, Mexico)
