OpenLGTV BCM: ffmpeg 0.10.2 in extroot
git-svn-id: http://svn.openlgtv.org.ru@1142 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -111,6 +111,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: free space for backup check in installer
     * ADD: simple network services menu example for customization
     * ADD: switchable flashblock type parser in proxy to filter most flash content in proxied Internet Browser
+    * ADD: ffmpeg 0.10.2 in extroot
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
