OpenLGTV BCM: more fixes to BusyBox, comment debug logs in fm-action.cgi
git-svn-id: http://svn.openlgtv.org.ru@1144 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -22,7 +22,6 @@ Not resolved (yet) issues: (status as for 0.5.0-beta4):
     * SmartTV (GP3B) builds were not tested
 
 TODO (not everything to be done for 0.5.0):
-    * FileManager: fix images/photos slideshow/preview that sometimes tries to open path without image
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
@@ -49,6 +48,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: FileManager: text files viewer improved
     * FIX: FileManager: attempt to preload next image into web browser cache in slideshow mode to make image change smoother
     * FIX: FileManager: prevent from few times running the same copy/move operation when previous one is not yet completed - also workaround for refreshing page
+    * FIX: FileManager: fix images/photos slideshow/preview that sometimes tries to open path without image
     * FIX: fallback with NTFS partitions remounting as read-only when remounting read-write wont succeed (problems with filesystem)
     * FIX: process /etc/profile in chrooted installer
     * FIX: missing /var/spool symlink for working crontab
