OpenLGTV BCM: fixes that didn't go cleanly into previous commit
git-svn-id: http://svn.openlgtv.org.ru@1151 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -2,7 +2,6 @@
 
 OpenLGTV BCM Changelog
 Not resolved (yet) issues: (status as for 0.5.0-beta4):
-    * once per around 10-15 times TV may boot without (OPEN)RELEASE - reboot/switch off/on fixes problem (I don't know where's the source of problem, yet)
     * NetPlayer alternative (rss.cgi) can be slow on bigger RSS/XML links or slow sites,
     * some TS/M2TS (or other malformed videos) files can crash RELEASE when played through FileManager,
     * YWE is not being enabled in other North American countries than US - but can be enabled with netcast_enable_all WebUI option,
@@ -72,6 +71,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: return after command execussion in Remote Control on stock web browser in old Symbian based smartphones
     * FIX: finding place for relative paths mount when OpenLGTV_BCM dir doesn't exist or there are two USB storage devices connected
     * FIX: ESC key handling in WebUI and FileManager
+    * FIX: once per around 10-15 times TV boot without (OPEN)RELEASE
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
