OpenLGTV BCM: fix Network Shares mounting with old config format
git-svn-id: http://svn.openlgtv.org.ru@1159 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -37,6 +37,10 @@ TODO (not everything to be done for 0.5.0):
     * upgrade uClibc?
     * ?
 
+0.5.0-rc2 [NOT RELEASED YET]:
+
+    * FIX: Network Shares mount with old (pre 0.5.0-rc1) config format
+
 0.5.0-rc1 [2012.05.09]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
     * FIX: FileManager: better handling of dirs with special characters
