OpenLGTV BCM: fixes for RSS parser
git-svn-id: http://svn.openlgtv.org.ru@1160 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -40,6 +40,8 @@ TODO (not everything to be done for 0.5.0):
 0.5.0-rc2 [NOT RELEASED YET]:
 
     * FIX: Network Shares mount with old (pre 0.5.0-rc1) config format
+    * FIX: handle '?' '&' chars in RSS parser
+    * FIX: better parsing for URLs in RSS parser
 
 0.5.0-rc1 [2012.05.09]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
