--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -119,7 +119,7 @@ document.defaultAction = true;
 	<script type="text/javascript">OnLoadSetCurrent();</script>
 	<td align="center"><a id="c2" onKeyPress="javascript:setCurrent(this);return false" href='../vod/ipla.cgi' target='_parent'><img src="Images/tmp/iplapl.png" border=2></a></td>
 	<td align="center"><a id="c3" onKeyPress="javascript:setCurrent(this);return false" href='../vod/tvp.cgi' target='_parent'><img src="Images/tmp/tvppl.png" width="200" border=2></a></td>
-	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../vod/yavido.cgi' target='_parent'><img src="Images/tmp/yavido.png" border=2></a></td>
+	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../vod/rss.cgi?type=text/xml&col=4&url=http://playon.unixstorm.org/PLIMS/tvn.php' target='_parent'><img src="Images/tmp/tvnpl.png" border=2></a></td>
 	<td align="center"><a id="c5" onKeyPress="javascript:setCurrent(this);return false" href='../vod/rss.cgi' target='_parent'><font size="+2">NetPlayer<br/>alternative</font></a></td>
 	<!-- td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../browser.cgi' target='_parent'><font size="+2" color='#FFFFFF'>Internet Browser</font></a></td -->
 	<!-- td align="center"><a id="c6" onKeyPress="javascript:setCurrent(this);return false" href='../vod/rss.cgi?type=text/xml&col=5&url=http://playon.unixstorm.org/PLIMS/iptak.rss' target='_parent'><div style='width: 200px; height: 56px; overflow: hidden;'><img src="Images/tmp/iptak.png" width="200" border=1></div></a></td -->
@@ -409,6 +409,7 @@ document.defaultAction = true;
 	<td align="center"><a id="c217" onKeyPress="javascript:setCurrent(this);return false" href='http://www.3deecentral.com/' target='_parent'><img src="Images/tmp/3deecentral.png" border=2></a></td>
 	<td align="center"><a id="c218" onKeyPress="javascript:setCurrent(this);return false" href='http://www.thekaraokechannel.com/tv' target='_parent'><img src="Images/tmp/thekaraokechannel.png" border=2></a></td>
 	<td align="center"><a id="c219" onKeyPress="javascript:setCurrent(this);return false" href='http://www.viewster.tv/viewster_v2/lge.html' target='_parent'><img src="Images/tmp/viewster2.png" border=2></a></td>
+	<td align="center"><a id="c220" onKeyPress="javascript:setCurrent(this);return false" href='../vod/yavido.cgi' target='_parent'><img src="Images/tmp/yavido.png" border=2></a></td>
 </tr>
 </table>
 </center>
