--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -42,6 +42,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: Network Shares mount with old (pre 0.5.0-rc1) config format
     * FIX: handle '?' '&' chars in RSS parser
     * FIX: better parsing for URLs in RSS parser
+    * ADD: TVN alternative service
 
 0.5.0-rc1 [2012.05.09]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
