OpenLGTV BCM: showmsg() shell function to show messages on TV screen
git-svn-id: http://svn.openlgtv.org.ru@1165 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -1,7 +1,8 @@
 <HTML><BODY><PRE>
 
 OpenLGTV BCM Changelog
-Not resolved (yet) issues: (status as for 0.5.0-rc1):
+Not resolved (yet) issues: (status as for 0.5.0-rc2):
+    * flashing LG firmware using big (full) EPK files on top of OpenLGTV BCM can make TV running without RELEASE (state fixable with serial connection only)
     * NetPlayer alternative (rss.cgi) can be slow on bigger RSS/XML links or slow sites,
     * some TS/M2TS (or other malformed videos) files can crash RELEASE when played through FileManager,
     * YWE is not being enabled in other North American countries than US - but can be enabled with netcast_enable_all WebUI option,
@@ -17,7 +18,7 @@ Not resolved (yet) issues: (status as for 0.5.0-rc1):
     * Some USB mouses or keyboard+mouse combo need to copy additional kernel modules - most modules binaries are in addons in SVN and are supported
     * USB keyboards are not supported in web browser
     * Bluetooth HID devices are not supported
-    * SmartTV (GP3B) builds were not tested
+    * SmartTV (GP3B) builds are not useful besides shell console
 
 TODO (not everything to be done for 0.5.0):
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
@@ -40,9 +41,10 @@ TODO (not everything to be done for 0.5.0):
 0.5.0-rc2 [NOT RELEASED YET]:
 
     * FIX: Network Shares mount with old (pre 0.5.0-rc1) config format
-    * FIX: handle '?' '&' chars in RSS parser
+    * FIX: handle '?', '&' chars and space in URLs in RSS parser
     * FIX: better parsing for URLs in RSS parser
     * ADD: TVN alternative service
+    * ADD: 'showmsg' shell function to show 2-line messages on TV screen
 
 0.5.0-rc1 [2012.05.09]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
